force-app/main/default/objects/bvd_connector__BvD_Job_Work_Item__c.object
<CustomObject>
    <fields>
        <fullName>bvd_connector__BvD_Id__c</fullName>
        <label>BvD Id</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__BvD_Job__c</fullName>
        <label>BvD Job</label>
        <referenceTo>bvd_connector__BvD_Job__c</referenceTo>
        <relationshipLabel>BvD Job Work Items</relationshipLabel>
        <relationshipName>BvD_Job_Work_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bvd_connector__BvD_Sub_Id__c</fullName>
        <label>BvD Sub Id</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Error_Details__c</fullName>
        <label>Error Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Failure_Reason__c</fullName>
        <label>Failure Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company does not exist in Orbis</fullName>
                </value>
                <value>
                    <fullName>Invalid Field Mapping</fullName>
                </value>
                <value>
                    <fullName>Value assignment Error</fullName>
                </value>
                <value>
                    <fullName>DML Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bvd_connector__Lookup_Field_Name__c</fullName>
        <label>Lookup Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__RecordId__c</fullName>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Record_Name__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                    <isActive>false</isActive>
                    <label>Not Processed</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                    <isActive>false</isActive>
                    <label>Processed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BvD Job Work Item</label>
    <nameField>
        <displayFormat>JOBIT-{00000}</displayFormat>
        <label>BvD Job Work Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BvD Job Work Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>